# Crypto-Multi-Pair

./: .gitignore  ARCHITECTURE_DIAGRAM_ADDED.md  BINANCE_DATA_EXPLAINED.md  COMPLETE_FIX_GUIDE.md  DASHBOARD_COMPLETE.md  DATA_ANALYSIS_README.md  DATA_AVAILABILITY_ANALYSIS.md  DATA_FLOW_DIAGRAM.md  DATA_LIMITATION_ANALYSIS.md  EXECUTIVE_SUMMARY.md  FIX_APPLIED_SUMMARY.md  FIX_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  MASTER_PY_GUIDE.md  MASTER_PY_SUMMARY.md  MASTER_SIMPLIFICATION_REPORT.md  MAX_HISTORY_COMPLETE.md  MAX_HISTORY_FEATURE.md  MEMORY_FIXES_APPLIED.md  MULTI_PAIR_BUGS_ANALYSIS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_FAILURE_ANALYSIS.md  PARALLELIZATION_COMPLETE.md  PIPELINE_GUIDE.md  PROGRESS_TRACKER_SUMMARY.md  PROGRESS_TRACKER_VERIFICATION.md  QUICK_FIX_IMPLEMENTATION.md  QUICK_START_PARALLEL.md  README.md  README_FIX.md  README_UPDATES.md  STATISTICAL_ARBITRAGE_DESIGN_SUMMARY.md  benchmark_optimization.py  benchmark_parallel.py  check_data_availability.py  compare_results.py  config.yaml  config_10pct_1year.yaml  config_improved_10pct.yaml  config_improved_10pct_1yr.yaml  (+29 more)
docs/: ALGORITHM_IMPROVEMENTS_RESULTS.md  ANALYSIS_MODULE_COMPLETE.md  ARCHITECTURE.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_QUICKSTART.md  HOW_TO_RUN_PORTFOLIO_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_GUIDE.md  PARALLELIZATION_EVIDENCE.md  PORTFOLIO_OPTIMIZATION_SPEEDUP_EVIDENCE.md  PORTFOLIO_REBALANCING_ANALYSIS.md  QUICKSTART.md  QUICK_FIX_GUIDE.md  QUICK_START_NEW_STRATEGIES.md  SOTA_STRATEGIES_PROPOSAL_2025.md  STATISTICAL_ARBITRAGE_COMPLETE.md  STATISTICAL_ARBITRAGE_IMPLEMENTATION_SUMMARY.md  STATISTICAL_ARBITRAGE_INTEGRATION_TEST.md  STATISTICAL_ARBITRAGE_STRATEGY_DESIGN.md  STATISTICAL_ARBITRAGE_VALIDATION_EVIDENCE.md  STRATEGY_FRAMEWORK_IMPLEMENTATION.md  STRATEGY_UNDERPERFORMANCE_ANALYSIS.md  UI_DESIGN_SPEC.md  analysis_module_guide.md  analysis_module_summary.md  analysis_usage_table.md  backtesting_guide.md  backtesting_implementation_summary.md  data_layer_guide.md  data_layer_quick_reference.md  data_layer_summary.md
examples/: analysis_demo.py  backtest_ma_crossover.py  basic_comparison.py  data_layer_demo.py  strategy_framework_example.py
master_results_20251013_190435/: MASTER_REPORT.txt
master_results_20251013_190601/: MASTER_REPORT.txt
master_results_20251013_190838/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251013_202328/: MASTER_REPORT.txt
master_results_20251013_203225/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251013_203823/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251013_203952/: MASTER_REPORT.txt
master_results_20251013_204453/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251013_204839/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251013_210052/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251013_210329/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251013_210631/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_020742/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_020838/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_021351/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_053855/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_060916/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_063110/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_064050/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_090958/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_091331/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_094949/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_102407/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_104141/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_110327/: MASTER_REPORT.txt  comparison_matrix.csv
master_results_20251014_112225/: MASTER_REPORT.md  comparison_matrix.csv
master_results_20251014_112525/: MASTER_REPORT.md  comparison_matrix.csv
master_results_20251014_115953/: MASTER_REPORT.html
master_results_20251014_120631/: MASTER_REPORT.html
tests/: test_end_to_end.py  (+4 more)
(+107 files in other folders)
